migre todas las paginas a sass y les cree sus carpetas para importarlas desde index.scss

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portafolio_antoniodelhierro_clase8",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a potfolio of a front end developer which includes all the projects and relevant links to social media of road to dev",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
