agruegue AOS css para animar social links del INDEX, seccion de YOUTUBE y seccion de PORTAFOLIO

--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-sass": "node-sass --include-path scss sass/index.scss assets/css/main.css",
     "watch-sass": "nodemon -e scss -x \"npm run build-sass\""
-
-
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/delhierroantonio/portafolioAntonioDelHierro.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Antonio del hierro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/delhierroantonio/portafolioAntonioDelHierro/issues"
@@ -24,5 +22,8 @@
   "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "aos": "^3.0.0-beta.6"
   }
 }
